[tool.poetry]
name = "svoe"
version = "0.1.0"
description = "A scalable, declarative, low-code framework for real-time data processing and feature engineering, predictive ML training/inference and simulation"
authors = ["Andrey Novitskiy"]
license = "Apache-2.0"
readme = "README.md"

[project]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
